# langgraph-fastapi-starter-v2

./: .gitignore  DOCKER_README.md  HITL_IMPLEMENTATION.md  docker-compose.yml  langchain-docs.md
backend/: Dockerfile  config.py  data_loader.py  document_store.py  frontend_store.py  main.py  memory_store.py  models.py  prompt.py  pyproject.toml  requirements.txt  server.py  start.md  test_api.py  test_hitl.py  test_questions.json  tools.py  verify_hitl.py
docs/: API_DOCUMENTATION.md  API_SCHEMA.json  conversations-db-schema.md
eda/: load_data.ipynb
frontend/: index.html
