[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "duckdb>=1.4.3",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "langchain==1.2.6",
    "langchain-core==1.2.7",
    "langchain-openai==1.1.7",
    "langgraph==1.0.6",
    "langgraph-checkpoint-sqlite==3.0.2",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pymupdf==1.26.3",
    "pymupdf4llm==0.0.27",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "sse-starlette>=3.1.2",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.40.0",
]
